--- a/styles/header.css
+++ b/styles/header.css
@@ -34,6 +34,17 @@ padding: 1em;
 left: 0;
   
   padding: 0.875em 1em;
+
+  & > span > a {
+
+    color: var(--text-color-secondary);
+
+    
+  }
+
+  & > span > a:hover{
+      color: var(--brand-color-light)
+    }
 }
 
 
