--- a/styles/global.css
+++ b/styles/global.css
@@ -42,6 +42,10 @@ html {
 
   color: var(--text-color-primary);
   background-color: var(--bg-color);
+
+  overflow-x: hidden;
+
+  box-sizing: border-box;
 }
 
 h1, h2, h3 {
