--- a/styles/destaques.css
+++ b/styles/destaques.css
@@ -4,9 +4,55 @@
   max-width: 100%; /* garante que não ultrapasse */
   overflow-x: hidden; /* evita que passe da tela horizontalmente */
   margin: 0 auto; /* centraliza se houver algum espaço sobrando */
+
+  justify-content: center;
 }
 
 .container__destaques{
+ 
+  width: 100%;
+
+  & > .noticia1 img {
+     width: 100%;
+     height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+& > .noticia1{
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr ;
+  
+}
+  
+  & > .noticias{
+    width: 50%;
+    grid-template-columns: 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+
+  & > .noticias img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+
+@media (width >= 80em){
+
+
+  #destaques {
+  display: flex;
+  width: 100vw; /* 100% da largura da tela */
+  max-width: 100%; /* garante que não ultrapasse */
+  overflow-x: hidden; /* evita que passe da tela horizontalmente */
+  margin: 0 auto; /* centraliza se houver algum espaço sobrando */
+}
+
+  .container__destaques{
  display: flex;
   width: 100%;
 
@@ -33,4 +79,6 @@
     height: 100%;
     object-fit: cover;
   }
+}
+
 }
