--- a/styles/destaques.css
+++ b/styles/destaques.css
@@ -4,32 +4,40 @@
   max-width: 100%; /* garante que não ultrapasse */
   overflow-x: hidden; /* evita que passe da tela horizontalmente */
   margin: 0 auto; /* centraliza se houver algum espaço sobrando */
-
-  justify-content: center;
+  
+ 
+  
+  
 }
 
 .container__destaques{
- 
-  width: 100%;
+  
+  padding: 16px;
+  
+  
 
   & > .noticia1 img {
      width: 100%;
      height: 100%;
     object-fit: cover;
-    display: block;
+    
   }
 
 & > .noticia1{
   width: 50%;
   display: grid;
   grid-template-columns: 1fr ;
+  width: auto;
+  margin: 0 auto 1rem auto;
   
 }
   
   & > .noticias{
-    width: 50%;
-    grid-template-columns: 1fr ;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+  width: auto;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
   }
 
 
@@ -41,7 +49,7 @@
 }
 
 
-@media (width >= 80em){
+@media (width >= 48.75em){
 
 
   #destaques {
