--- a/styles/destaques.css
+++ b/styles/destaques.css
@@ -1,9 +1,9 @@
 #destaques {
   
-  width: 100%; /* 100% da largura da tela */
-  max-width: 100%; /* garante que não ultrapasse */
-  overflow-x: hidden; /* evita que passe da tela horizontalmente */
-  margin: 0 auto; /* centraliza se houver algum espaço sobrando */
+  width: 100%; 
+  max-width: 100%; 
+  overflow-x: hidden; 
+  margin: 0 auto; 
   
  
   
@@ -66,6 +66,7 @@
   & > .container__contentcard {
     bottom: 0;
     margin: 3.2em 1em 1em 1em;
+    padding-bottom: 2rem;
   }
 
 }
@@ -101,10 +102,10 @@
 
   #destaques {
   
-  width: 100vw; /* 100% da largura da tela */
-  max-width: 100%; /* garante que não ultrapasse */
-  overflow-x: hidden; /* evita que passe da tela horizontalmente */
-  margin: 0 auto; /* centraliza se houver algum espaço sobrando */
+  width: 100vw; 
+  max-width: 100%; 
+  overflow-x: hidden; 
+  margin: 0 auto; 
 
 
 
