--- a/styles/destaques.css
+++ b/styles/destaques.css
@@ -73,7 +73,13 @@
 
 .noticia1 > div{
   position: absolute;
-  
+
+   bottom: 0;
+  left: 0;
+  right: 0;
+  box-sizing: border-box; 
+
+
   color: var(--text-color-primary);
   max-height: 50%;
 
@@ -90,7 +96,8 @@
 
   & > span {
     display: block;
-    font-size: var(--fs-h1);
+    font-size: 0.9rem;
+    
   }
 }
 
