--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,19 @@
+*,
+*::after,
+*::before {
+  
+  box-sizing: inherit;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  
+
+  -webkit-font-smoothing: antialiased; /*Prefixo de um motor de navegador*/
+  -webkit-osx-font-smoothing: grayscale;
+}
+
 :root {
   
 
@@ -46,6 +62,10 @@ html {
   overflow-x: hidden;
 
   box-sizing: border-box;
+}
+
+body {
+
 }
 
 h1, h2, h3 {
