--- a/styles/week.css
+++ b/styles/week.css
@@ -1,5 +1,5 @@
 #week {
-
+    margin: 2em 1em;
 
 
     padding-top: 0.75em;
@@ -13,14 +13,32 @@
     
 
     &  .containerimg {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 0.4fr;
         align-items: center;
         
 
         & > img {
-
-            background-color: brown;
+            margin-left: 0.25em;
+            
             
         }
     }
+}
+
+
+
+@media (width <= 269px) {
+
+    #week {
+
+
+        & > .heading {
+        justify-content: space-between;
+        
+            gap:1rem;
+        
+    }
+    }
+    
+
 }
