--- a/styles/destaques.css
+++ b/styles/destaques.css
@@ -163,7 +163,7 @@ position: relative;
   width: 100vw; 
   max-width: 100%; 
   overflow-x: hidden; 
-  margin: 0 auto; 
+  margin: 0 auto 3em auto; 
 
 
 
