--- a/styles/about.css
+++ b/styles/about.css
@@ -21,6 +21,100 @@
 
 
 
+.about_container__content {
 
+
+    & .destaques__IA {
+
+
+        & > .heading {
+        justify-content: space-between;
+        color: var(--text-color-secondary);
+    }
+
+    
+
+    &  .containerimg {
+        grid-template-columns: 1fr 0.4fr;
+        align-items: center;
+        color: var(--text-color-secondary);
+
+        & > img {
+            margin-left: 0.25em;
+            
+            
+        }
+    }
+    }
+}
+
+
+
+.container__destaques__IA{
+
+    display: flex;
+    
+
+    width: 100%;
+    max-width: 100%;
+    gap: 1em;
+}
+
+.containerleft{
+    width: 150%;
+    min-height: 100%;
+max-width: 100%;
+    & > span {
+        display: block;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+}
+
+
+
+.containerright{
+
+    width: 100%;
+    padding-top: 10em;
+    min-width: 20vh;
+    
+    
+        
+        background-image: url(../assets/mulhercomvr.png);
+    
+    background-size: cover;      /* Faz a imagem preencher toda a div */
+    background-repeat: no-repeat; /* Impede que a imagem se repita */
+    background-position: center; /* Centraliza a imagem na div */
+    
+    
+}
+
+
+
+
+
+@media (width <= 527px) {
+
+
+
+
+    #about {
+
+        & .about_container__content{
+            & .destaques__IA{
+
+                & .heading{
+                    justify-content: space-between;
+                    gap: 1em
+                }
+            }
+        }
+    }
+    
 
 }
