--- a/styles/about.css
+++ b/styles/about.css
@@ -12,10 +12,7 @@
     gap: 2em
     }
 
-    & .destaques__IA, .aside {
-    width: 50%;
-    max-width: 50%;
-    }
+   
 
 
 
@@ -23,6 +20,7 @@
 
 .about_container__content {
 
+    grid-template-columns: repeat(2, 1fr);
 
     & .destaques__IA {
 
@@ -79,9 +77,10 @@ max-width: 100%;
 
 .containerright{
 
-    width: 100%;
-    padding-top: 10em;
-    min-width: 20vh;
+    width: 438px;
+    height: 200px;
+    
+    
     
     
         
