--- a/styles/about.css
+++ b/styles/about.css
@@ -98,25 +98,21 @@
 
 .containerright{
 
-    width: 438px;
-    height: 200px;
-    
+
     
     
     
         
         background-image: url(../assets/mulhercomvr.png);
-    
-    background-size: cover;      /* Faz a imagem preencher toda a div */
-    background-repeat: no-repeat; /* Impede que a imagem se repita */
-    background-position: center; /* Centraliza a imagem na div */
-    
+width: 100%;
+            height: 100%;
+            object-fit: cover;
+      background-repeat: no-repeat;
     
 }
 
 .containerrightpeople{
-       width: 438px;
-    height: 200px;
+       
     
     
     
@@ -124,16 +120,15 @@
         
         background-image: url(../assets/pessoascomcelular.png);
     
-    background-size: cover;      /* Faz a imagem preencher toda a div */
-    background-repeat: no-repeat; /* Impede que a imagem se repita */
-    background-position: center; /* Centraliza a imagem na div */
-    
+   width: 100%;
+            height: 100%;
+            object-fit: cover;
+              background-repeat: no-repeat;
 }
 
 
 .containerrightnotebook{
-           width: 438px;
-    height: 200px;
+           
     
     
     
@@ -141,16 +136,15 @@
         
         background-image: url(../assets/maorobo.png);
     
-    background-size: cover;      /* Faz a imagem preencher toda a div */
-    background-repeat: no-repeat; /* Impede que a imagem se repita */
-    background-position: center; /* Centraliza a imagem na div */
-   
+   width: 100%;
+            height: 100%;
+            object-fit: cover;
+              background-repeat: no-repeat;
 }
 
 
 .containerrightmeninacelular{
-              width: 438px;
-    height: 200px;
+             
     
     
     
@@ -158,9 +152,11 @@
         
         background-image: url(../assets/meninacelular.png);
     
-    background-size: cover;      /* Faz a imagem preencher toda a div */
-    background-repeat: no-repeat; /* Impede que a imagem se repita */
-    background-position: center; /* Centraliza a imagem na div */
+    width: 100%;
+            height: 100%;
+            object-fit: cover;
+            background-repeat: no-repeat;
+           
   
 }
 
@@ -174,13 +170,11 @@
 
 
     & .containerads{
-        width: inherit;
-        height: inherit;
+        
         & > img {
-            background-image: url(../assets/Ads.png);
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 }
